--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,8 @@ dmypy.json
 cython_debug/
 
 data
+vectorized_texts
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
